--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,9 +1,10 @@
 ---
-acme_client_user: acme_client
-acme_client_group: acme_client
-acme_client_log_dir: /var/log/acme_client
-acme_client_db_dir: "{{ __acme_client_db_dir }}"
-acme_client_service: acme_client
+acme_client_challengedir: "{{ __acme_client_challengedir }}"
 acme_client_conf_dir: "{{ __acme_client_conf_dir }}"
-acme_client_conf_file: "{{ __acme_client_conf_dir }}/acme_client.conf"
+acme_client_conf_file: "{{ acme_client_conf_dir }}/acme-client.conf"
+acme_client_account_key_dir: "{{ __acme_client_account_key_dir }}"
+acme_client_config: ""
 acme_client_flags: ""
+acme_client_domains: []
+acme_client_hanlder: disabled
+acme_client_flush_handlers: no
