--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,6 +1,8 @@
 ---
 
-- name: Restart acme_client
-  service:
-    name: acme_client
-    state: restarted
+- name: Update TLS certs
+  listen: Run acme-client
+  command: "acme-client {{ acme_client_flags }} {{ item | quote }}"
+  with_items: "{{ acme_client_domains }}"
+  when:
+    - acme_client_hanlder == 'enabled'
