--- a/tests/serverspec/default.yml
+++ b/tests/serverspec/default.yml
@@ -3,4 +3,48 @@
   roles:
     - ansible-role-acme_client
   vars:
-    acme_client_config: ""
+    acme_client_flags: "-f {{ acme_client_conf_file }} -vv"
+    acme_client_domains:
+      - example.org
+      - example.net
+    acme_client_config: |
+      authority letsencrypt {
+        api url "https://acme-v02.api.letsencrypt.org/directory"
+        account key "/etc/acme/letsencrypt-privkey.pem"
+      }
+
+      authority letsencrypt-staging {
+          api url "https://acme-staging-v02.api.letsencrypt.org/directory"
+          account key "/etc/acme/letsencrypt-staging-privkey.pem"
+      }
+
+      domain example.org {
+          alternative names { www.example.com }
+          domain key "/etc/ssl/private/example.org.key"
+          domain full chain certificate "/etc/ssl/example.org.fullchain.pem"
+          sign with letsencrypt
+      }
+
+      domain example.net {
+          alternative names { www.example.com }
+          domain key "/etc/ssl/private/example.net.key"
+          domain full chain certificate "/etc/ssl/example.net.fullchain.pem"
+          sign with letsencrypt
+      }
+
+    acme_client_cron_jobs:
+      - name: example.org
+        cron:
+          name: Check cert for example.org
+          hour: 8
+
+          # XXX use `~` here on OpenBSD 6.7
+          minute: 45
+          job: "acme-client {{ acme_client_flags }} example.org"
+
+      - name: example.net
+        cron:
+          name: Check cert for example.net
+          hour: 9
+          minute: 45
+          job: "acme-client {{ acme_client_flags }} example.net"
