--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -21,9 +21,9 @@ provisioner:
     - filter_plugins
 
 platforms:
-  - name: freebsd-12.0-amd64
+  - name: openbsd-6.6-amd64
     driver:
-      box: trombik/ansible-freebsd-12.0-amd64
+      box: trombik/ansible-openbsd-6.6-amd64
       box_check_update: false
     driver_config:
       ssh:
