--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,13 +2,14 @@
 galaxy_info:
   role_name: acme_client
   author: Tomoyuki Sakurai
-  description: Configures something
+  description: Configures acme-client
   company: N/A
   license: BSD
   min_ansible_version: 2.0
   platforms:
-    - name: FreeBSD
+    - name: OpenBSD
       versions:
-        - 12.0
+        - 6.6
   galaxy_tags:
-    - system
+    - openbsd
+    - tls
